# KinoCMS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  celerybeat-schedule  conftest.py  docker-compose.yml  docker-entrypoint.sh  dump.rdb  pyproject.toml  pytest.ini
config/: __init__.py  admin_urls.py  celery.py  kino_admin_wsgi.py  kino_cms_wsgi.py  kino_urls.py
config/settings/: kino_admin.py  kino_cms.py  settings.py
docker/nginx/: nginx.conf
docker/postgres/: Dockerfile  init.sql
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.po
nginx/: nginx.conf
seed/hall_schemas/: 4dx.json  cinetech.json  cinetech_lviv.json  imax.json  imax_kharkiv.json  imax_kiev.json  imax_odessa.json  package.json  relux.json  relux_lviv.json
seed/template/: MailingTemplate-1.html
src/: __init__.py
src/authz/: __init__.py  apps.py  endpoints.py  errors.py  schemas.py  test_schemas.py  tests.py
src/booking/: __init__.py  apps.py  models.py
src/booking/endpoints/: __init__.py  seance.py  ticket.py
src/booking/managers/: seance.py  ticket.py
src/booking/migrations/: 0001_initial.py  0002_initial.py  0002_remove_seance_slug_remove_ticket_user_and_more.py  0003_alter_seance_date.py  0004_alter_seance_hall.py  0005_seance_movie.py  0006_remove_seance_tech_type.py  0007_alter_seance_options.py  0008_alter_ticket_unique_together.py  0009_ticket_date_created.py
src/booking/schemas/: seance.py  ticket.py
src/booking/services/: seance.py  ticket.py
src/cinemas/: __init__.py  admin.py  apps.py  models.py  translation.py
src/cinemas/endpoints/: cinema.py  hall.py
src/cinemas/managers/: cinema.py  hall.py
src/cinemas/migrations/: 0001_initial.py  0002_alter_cinema_gallery.py  0002_alter_cinema_slug.py  0002_remove_cinema_seo_remove_hall_seo_and_more.py  0003_alter_cinema_name.py  0003_alter_cinema_seo_description_alter_cinema_seo_title_and_more.py  0003_alter_cinema_seo_image_alter_hall_seo_image.py  0004_alter_cinema_name.py  0004_remove_cinema_description_ru_and_more.py  0005_alter_cinema_name.py  0005_cinema_description_ru_cinema_description_uk_and_more.py  0006_alter_cinema_name.py  0006_alter_hall_tech.py  0007_alter_cinema_name.py  0007_alter_hall_tech.py  0008_alter_cinema_name.py  0008_cinema_description_ru_cinema_description_uk_and_more.py  0009_alter_cinema_name.py  0009_remove_cinema_card_img.py  0010_alter_cinema_banner_alter_cinema_gallery_and_more.py  0010_cinema_address_ru_cinema_address_uk.py  0011_alter_cinema_banner.py  0011_alter_cinema_coordinate_alter_cinema_description_and_more.py  0012_alter_cinema_coordinate.py  0012_alter_cinema_gallery_alter_cinema_logo_and_more.py  0013_alter_cinema_banner_alter_cinema_gallery_and_more.py  0013_alter_hall_description_alter_hall_description_ru_and_more.py  0014_alter_cinema_banner.py  0014_cinema_phone_1_cinema_phone_2.py  0015_alter_cinema_banner.py  0015_remove_hall_schema.py  0016_alter_cinema_gallery_alter_cinema_logo_and_more.py  0016_hall_schema.py  0017_alter_cinema_options_cinema_date_created.py  0017_alter_hall_options.py  0018_cinema_email.py  0018_cinema_terms.py  0019_cinema_terms_ru_cinema_terms_uk.py  0019_rename_schema_hall_layout_alter_hall_tech.py  0020_alter_cinema_banner.py  (+4 more)
src/cinemas/schemas/: cinema.py  hall.py
src/cinemas/services/: __init__.py  cinema.py  hall.py
src/cinemas/tests/: __init__.py  cinema_tests.py  hall_tests.py
src/core/: admin.py  apps.py  errors.py  models.py  schemas.py  tests.py  utils.py
src/core/endpoints/: gallery.py  images.py  statistic.py
src/core/management/: __init__.py
src/core/managers/: __init__.py  gallery.py  images.py
src/core/migrations/: 0001_initial.py  0002_alter_gallery_images.py  0002_delete_seo.py  0003_alter_gallery_images.py  0003_rename_galleryitem_galleryimage_and_more.py  0004_alter_gallery_images.py
src/core/schemas/: __init__.py  base.py  gallery.py  images.py  seo.py
src/core/services/: core.py  gallery.py  images.py  statistic.py
src/mailing/: __init__.py  apps.py  endpoints.py  errors.py  models.py  schemas.py  tasks.py  tests.py
src/mailing/migrations/: 0001_initial.py  0002_alter_mailtemplate_options.py  0003_alter_mailtemplate_options_and_more.py  0004_alter_mailtemplate_options.py  0005_alter_mailtemplate_file.py
src/mailing/services/: mailing.py  mailing_service.py
src/movies/: __init__.py  apps.py  endpoints.py  manager.py  models.py  schemas.py  service.py  tests.py  translation.py  utils.py
src/movies/migrations/: 0001_initial.py  0002_alter_movie_banner_alter_movie_card_img_and_more.py  0002_alter_movie_budget_alter_movie_duration_and_more.py  0002_remove_movie_seo_movie_seo_description_and_more.py  0003_alter_movie_banner_alter_movie_card_img_and_more.py  0003_alter_movie_seo_description_alter_movie_seo_title.py  0003_alter_movie_seo_image.py  0004_alter_movie_banner_alter_movie_card_img.py  0004_alter_movie_description_alter_movie_description_ru_and_more.py  0005_alter_movie_banner_alter_movie_card_img_and_more.py  0005_alter_movie_techs.py  0006_alter_movie_participants.py  0006_alter_movie_seo_image.py  0007_alter_movie_participants.py  0007_movie_description_ru_movie_description_uk_and_more.py  0008_remove_movie_banner.py  0008_tech_remove_movie_techs_movie_techs.py  0009_alter_movie_legal_age.py  0009_alter_tech_options.py  0010_alter_movie_released.py  0011_movie_countries.py  0012_remove_movie_genres_movie_genres.py  0013_alter_movie_genres.py  0014_alter_movie_genres.py  0015_alter_movie_genres.py  0016_alter_movie_genres.py  0017_alter_movie_genres.py  0018_alter_movie_genres.py  0019_alter_movie_genres.py  0020_alter_movie_genres.py  0021_movieparticipantperson_fullname_ru_and_more.py  0022_alter_movieparticipantperson_fullname_and_more.py  0023_alter_movieparticipant_unique_together.py  0024_alter_movieparticipant_options.py  (+4 more)
src/pages/: __init__.py  apps.py  errors.py  models.py  translation.py
src/users/: apps.py  authentication.py  endpoints.py  errors.py  models.py  schemas.py  tasks.py  utils.py
templates/statistic/: base.html
(+58 files in other folders)
